# NEAT-SIM

./: .gitignore  NEAT.ipynb  README.md  docs.md  environment.py  experiment.ipynb  game.py  pyproject.toml  vae.py
deep_cfr/: belief.py
