[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-sim"
version = "0.1.0"
description = "Naval strategy prediction with latent action representation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "ipykernel",
]

[tool.setuptools]
py-modules = ["vae", "environment"]